main - Initial build

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,27 @@
 /* You can add global styles to this file, and also import other style files */
+html, body{
+  height: 100%;
+  width: 100%;
+  margin: 0;
+  padding: 0;
+  font-family: 'Roboto Light', Arial, sans-serif;
+  font-size: 16px;
+  color: #252525;
+}
+
+h1,h2,h3,h4,h5,h6,p,ul,ol,li {
+  margin: 0;
+  padding: 0;
+}
+
+ul {
+  list-style: none;
+}
+
+.font-source {
+  font-family: monospace;
+}
+
+.font-300 {
+  font-weight: 300;
+}
