--- a/src/styles.scss
+++ b/src/styles.scss
@@ -32,3 +32,14 @@ ul {
   font-style: italic;
   margin-bottom: variables.$pad-xsm;
 }
+
+
+.section_title {
+  margin-bottom: variables.$pad-xsm;
+}
+
+.date {
+  font-size: 0.9em;
+  margin-bottom: variables.$pad-xsm;
+}
+
