--- a/src/app/experience/experience.component.html
+++ b/src/app/experience/experience.component.html
@@ -1,6 +1,6 @@
 <div class="experience">
-  <h3 class="experience_title">{{ experience.title }}</h3>
-  <h4 class="experience_date">{{ experience.dateRange }}</h4>
+  <h3 class="section_title">{{ experience.title }}</h3>
+  <h4 class="date">{{ experience.dateRange }}</h4>
   <p class="meta">Primary skills: {{ experience.primarySkills }}</p>
   <div class="experience_summary">
     {{ experience.summary }}
